# kv_cache_affinity

./: .gitignore  affinity_callback.py  patcher.py  plugin.py  pyproject.toml  vllm流程.md  代码走读清单.md  评估报告.md
docs/: 讲稿-KV-Cache-Affinity全流程.md
engine/: protocol.py
entrypoints/openai/: api_server.py  protocol.py  serving_chat.py
v1/: request.py
v1/core/: block_pool.py  input_processor.py  kv_cache_coordinator.py  kv_cache_manager.py  kv_cache_session_manager.py  single_type_kv_cache_manager.py  two_phase_block_queue.py
v1/core/sched/: interface.py  scheduler.py
v1/engine/: async_llm.py  core.py  core_client.py
